<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_profile"
        android:key="pref_key_profile"
        >

        <EditTextPreference
            android:key="pref_key_name"
            android:summary="@string/pref_name_summary"
            android:title="@string/pref_name"
            android:inputType="textPersonName"/>

        <Preference
            android:key="pref_key_bloodsugar"
            android:summary="@string/pref_blood_sugar_summary"
            android:title="@string/pref_blood_sugar"/>
        <EditTextPreference
            android:key="pref_key_weight"
            android:summary="@string/pref_weight_summary"
            android:title="@string/pref_weight"
            android:inputType="numberDecimal"/>
        <ListPreference
            android:entries="@array/weightOptions"
            android:entryValues="@array/weightOptions"
            android:key="pref_weightOptions"
            android:summary="@string/pref_weight_measurement_summary"
            android:title="@string/pref_weight_measurement" />
        //TODO: Saving for this point is missing
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_notification"
        android:key="pref_key_notification">
        <CheckBoxPreference
            android:key="pref_key_popup"
            android:title="@string/pref_popup"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_key_sound"
            android:title="@string/pref_sound"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_key_sound"
            android:title="@string/pref_vibration"
            android:defaultValue="false"/>
        <CheckBoxPreference
            android:key="pref_key_assistant"
            android:title="@string/pref_assistant_notification"
            android:summary="@string/pref_assistant_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_rec"
        android:key="pref_rec">
        <CheckBoxPreference
            android:key="pref_key_food_rec"
            android:title="@string/pref_food_rec"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_key_bs_input"
            android:title="@string/pref_bs_input"
            android:defaultValue="true"/>
        <CheckBoxPreference
            android:key="pref_key_activity_rec"
            android:title="@string/pref_activity_rec"
            android:defaultValue="true"/>
    </PreferenceCategory>

    <!-- Prediction Model -->
    <PreferenceCategory
        android:title="@string/pref_predModel"
        android:key="pref_predModel">
        <uni.mannheim.teamproject.diabetesplaner.UI.SettingsActivity.MyDialogPreference
            android:key="pref_key_reset"
            android:title="@string/pref_reset"
            android:summary="@string/pref_reset_summary"
            android:dialogIcon="@android:drawable/ic_dialog_alert"
            android:dialogMessage="@string/pref_reset_dialog_message"
            android:positiveButtonText="@string/reset"
            android:negativeButtonText="@string/cancel"/>
        <CheckBoxPreference
            android:key="pref_datacollection"
            android:title="@string/pref_datacollection"
            android:summary="@string/pref_datacollection_summary"
            android:defaultValue="true"
            android:dialogMessage="@string/pref_datacollection_dialog"
            android:dialogIcon="@android:drawable/ic_dialog_alert"
            android:positiveButtonText="@string/Yes"
            android:negativeButtonText="@string/No"/>
        <CheckBoxPreference
            android:key="pref_vacation"
            android:summary="@string/pref_vacation_summary"
            android:title="@string/pref_vacation_title"
            android:defaultValue="false"/>

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_other"
        android:key="pref_key_other">

        <Preference
            android:key="pref_add_activity"
            android:summary="Erstelle neue Aktivität für die Auswahl"
            android:title="Aktivität hinzufügen" />

            //TODO: String.xml anpassen



        <uni.mannheim.teamproject.diabetesplaner.UI.SettingsActivity.MyDialogPreference
            android:key="pref_key_help"
            android:title="@string/pref_help"
            android:summary="@string/pref_help_summary"
            android:dialogIcon="@android:drawable/ic_dialog_info"
            android:dialogMessage="@string/pref_help_dialog_message"
            android:positiveButtonText="@string/ok"
            android:negativeButtonText="@string/cancel"/>
        <Preference
            android:key="pref_key_about"
            android:summary="@string/pref_version_summary"
            android:title="@string/pref_version"/>

    </PreferenceCategory>

</PreferenceScreen>