<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_daily_routine" android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_item_daily_routine" />
        <!--<item android:id="@+id/nav_activity_input" android:icon="@android:drawable/ic_menu_add"-->
            <!--android:title="@string/menu_item_activity_input" />-->
        <item android:id="@+id/nav_activity_measurement" android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_item_activity_input" />
        <item android:id="@+id/nav_statistics" android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_item_statistics" />
        <item android:id="@+id/nav_history" android:icon="@android:drawable/ic_menu_today"
            android:title="@string/menu_item_history" />
        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_item_settings" />
    </group>

</menu>