<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:contextClickable="true"
    android:orientation="vertical">

    <TextView
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bloodsugar_prompt"
        android:id="@+id/tv_bloodsugar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_date"
                android:ems="10"
                android:singleLine="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="8"
                android:singleLine="true"
                android:id="@+id/edit_time"
                android:hint="@string/hint_time" />
                />

        </android.support.design.widget.TextInputLayout>


    </TableRow>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edit_measure_value"
                android:layout_column="0"
                android:numeric="decimal"
                android:singleLine="true"
                android:gravity="center"
                android:hint="@string/hint_measurement"
                android:layout_marginTop="50dp" />

        </android.support.design.widget.TextInputLayout>


        <RadioGroup
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            >
            <!-- RadioButton color adjusted by Naira-->
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:text="@string/milligram_dl"
                android:id="@+id/bs_mg"
                android:checked="false"
                android:buttonTint="@color/colorAccent"/>

            <RadioButton
                android:layout_width="152dp"
                android:layout_height="57dp"
                android:text="@string/mmol_l"
                android:id="@+id/bs_mm"
                android:checked="false"
                android:buttonTint="@color/colorAccent"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentage"
                android:id="@+id/bs_percentage"
                android:checked="false"
                android:buttonTint="@color/colorAccent"/>

        </RadioGroup>

    </TableRow>

</LinearLayout>
